--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,9 +1,9 @@
-upstream unicorn {
+upstream unicorn_tutor_bear {
   server unix:/tmp/unicorn.tutor_bear.sock fail_timeout=0;
 }
 
 server {
-  listen 80 default deferred;
+  listen 80;
   server_name tutorbear.net;
   root /var/www/tutor_bear/current/public;
 
@@ -13,12 +13,12 @@ server {
     add_header Cache-Control public;
   }
 
-  try_files $uri/index.html $uri @unicorn;
-  location @unicorn {
+  try_files $uri/index.html $uri @unicorn_tutor_bear;
+  location @unicorn_tutor_bear {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
     proxy_redirect off;
-    proxy_pass http://unicorn;
+    proxy_pass http://unicorn_tutor_bear;
   }
 
   error_page 500 502 503 504 /500.html;
