--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,7 +4,7 @@ upstream unicorn_tutor_bear {
 
 server {
   listen 80;
-  server_name tutorbear.net;
+  server_name tutorbear.net www.tutorbear.net;
   root /var/www/tutor_bear/current/public;
 
   location ^~ /assets/ {
